--- a/TradeProAssistant/Views/Shared/_Layout.cshtml
+++ b/TradeProAssistant/Views/Shared/_Layout.cshtml
@@ -44,7 +44,7 @@
                             @Html.ActionLink("HAK Decoder", "Decoder", "HuntAKiller", null, new { @class = "nav-link" })
                         </li>
                         <li class='@String.Format("nav-item{0}", ViewBag.tab == "Strategies" ? " active" : "")'>
-                            @Html.ActionLink("Strategies", "Strategies", "TradeProStrategy", null, new { @class = "nav-link" })
+                            @Html.ActionLink("Trading", "Trading", "TradeProStrategy", null, new { @class = "nav-link" })
                         </li>
                     </ul>
                 </div>
