--- a/TradeProAssistant/Views/TradeProStrategy/_TradeTicketQualifiers.cshtml
+++ b/TradeProAssistant/Views/TradeProStrategy/_TradeTicketQualifiers.cshtml
@@ -2,7 +2,7 @@
 
 <div class="card mb-3">
     <div class="card-header text-white bg-primary">Trade Qualifiers</div>
-    @*<ul class="list-group list-group-flush pullback-trade-steps">
+    @*<ul class="list-group list-group-flush trade-steps">
             <li class="list-group-item">Step 1: Your zone is hit <input type="checkbox" style="float: right; margin-top: 6px;" /></li>
             <li class="list-group-item">Step 2: Rotations appear <input type="checkbox" style="float: right; margin-top: 6px;" /></li>
             <li class="list-group-item">Step 3: Selling absorption <input type="checkbox" style="float: right; margin-top: 6px;" /></li>
