--- a/TradeProAssistant/Views/TradeProStrategy/_TradeTicketsTable.cshtml
+++ b/TradeProAssistant/Views/TradeProStrategy/_TradeTicketsTable.cshtml
@@ -1,17 +1,11 @@
-﻿@(Html.Kendo().Grid<DayPerformanceModel>()
-            .Name("pullbackDayPerformanceGrid")
+﻿@(Html.Kendo().Grid<TradeTicketDto>()
+            .Name("tradeTicketsGrid")
             .Columns(columns =>
             {
-                columns.Bound(x => x.Date).Format("{0:d}").Width(75);
-                columns.Bound(x => x.Day).Width(75);
-                columns.Bound(x => x.Wins).Width(75);
-                columns.Bound(x => x.Losses).Width(75);
-                columns.Bound(x => x.Trades).Width(75);
-                columns.Bound(x => x.WinPtg).Width(75).Format("{0:p0}");
-                columns.Bound(x => x.PPC).Width(75).Format("{0:c2}");
+                columns.Bound(x => x.Timestamp).Format("{0:g}").Width(125);
+                columns.Bound(x => x.Asset).Width(75);
+                columns.Bound(x => x.Won).Width(75).ClientTemplate("#= Won ? 'Yes' : 'No' #");
                 columns.Bound(x => x.PnL).Width(75).Format("{0:c2}");
-                //columns.Bound(x => x.Won).Width(75).ClientTemplate("#= Won ? 'Yes' : 'No' #");
-                //columns.Bound(x => x.PnL).Width(75).Format("{0:c2}");
                 //columns.Bound(x => x.Name).Width(175);
                 //columns.Bound(x => x.NextEarningsDate).Format("{0:d}").Width(75).Title("Next Earnings");
                 //columns.Bound(x => x.ExDividendDate).Format("{0:d}").Width(75).Title("Ex Dividend");
@@ -42,12 +36,11 @@
         )
         .DataSource(dataSource => dataSource
             .Ajax()
-            .Sort(sort => sort.Add(x => x.Date).Descending())
+            .Sort(sort => sort.Add(x => x.Timestamp))
             .PageSize(50)
-            .ServerOperation(false)
             .Read(read =>
             {
-                read.Action("PullbackDayPerformance_Read", "TradeProStrategy");
+                read.Action("TradeTickets_Read", "TradeProStrategy");
             }
             )
         )
