add market structure qualifiers

--- a/TradeProAssistant/Views/Shared/_Layout.cshtml
+++ b/TradeProAssistant/Views/Shared/_Layout.cshtml
@@ -63,7 +63,7 @@
     </div>
 
     <input type="hidden" id="uxInput_RootUrl" value="@Url.Content("~")" />
-    <input type="hidden" id="uxInput_RiskParameters" value="@JsonConvert.SerializeObject(GlobalSettings.ActiveRiskParameters)" />
+    <input type="hidden" id="uxInput_TradingSettings" value="@JsonConvert.SerializeObject(GlobalSettings.ActiveTradingSettings)" />
 
     @Scripts.Render("~/bundles/jquerySignalR")
     <script src="~/signalr/hubs"></script>
