--- a/TradeProAssistant/Views/TradeProStrategy/_TradeTicketForm.cshtml
+++ b/TradeProAssistant/Views/TradeProStrategy/_TradeTicketForm.cshtml
@@ -6,14 +6,18 @@
     </div>
     <div class="col-8">
         @using (Ajax.BeginForm("TradeTicketForm", "TradeProStrategy", null,
-            new AjaxOptions
-            {
-                OnSuccess = "TradeTicketFormOnSuccess"
-            }, new { id = "TradeTicketForm" }))
+                new AjaxOptions
+                {
+                    OnSuccess = "TradeTicketFormOnSuccess"
+                }, new { id = "TradeTicketForm" }))
         {
             <div class="card mb-3">
                 <div class="card-header text-white bg-warning">Trade Ticket</div>
                 <div class="card-body">
+                    <div id="market-structure-qualifiers" class="form-group row d-flex justify-content-center">
+                        @Html.Action("MarketStructureQualifiers", "TradeProStrategy", new { strategy = Model.Strategy })
+                    </div>
+                    <hr />
                     <div class="form-group row hasSelect">
                         @Html.LabelFor(x => x.Asset, new { @class = "col-sm-2 col-form-label" })
                         <div class="col-sm-4">
@@ -32,12 +36,12 @@
 
                     <div class="form-group row">
                         @*@Html.LabelFor(x => x.ZoneQualified, new { @class = "col-sm-2 col-form-label" })
-                        <div class="col-sm-4">
-                            <div class="custom-control custom-switch">
-                                @Html.CheckBoxFor(x => x.ZoneQualified, new { @class = "custom-control-input" })
-                                <label class="custom-control-label" for="ZoneQualified"></label>
-                            </div>
-                        </div>*@
+                            <div class="col-sm-4">
+                                <div class="custom-control custom-switch">
+                                    @Html.CheckBoxFor(x => x.ZoneQualified, new { @class = "custom-control-input" })
+                                    <label class="custom-control-label" for="ZoneQualified"></label>
+                                </div>
+                            </div>*@
                         @Html.LabelFor(x => x.Strategy, new { @class = "col-sm-2 col-form-label" })
                         <div class="col-sm-4">
                             @Html.DropDownListFor(x => x.Strategy, new SelectList(Enums.StrategiesExtensions.SelectItems(), "Value", "Text"), "--Select Strategy--", new { @class = "form-control" })
@@ -51,8 +55,8 @@
                     <div class="form-group row">
                         @Html.LabelFor(x => x.Qualifier1, new { @class = "col-sm-2 col-form-label" })
                         <div class="col-sm-4">
-                            @Html.DropDownListFor(x => x.Qualifier1, new SelectList(Enums.TradeQualifiersExtensions.SelectItems(), "Value", "Text"), "--Select Qualifier--", new { @class = "form-control"})
-                        </div>      
+                            @Html.DropDownListFor(x => x.Qualifier1, new SelectList(Enums.TradeQualifiersExtensions.SelectItems(), "Value", "Text"), "--Select Qualifier--", new { @class = "form-control" })
+                        </div>
                         <div class="col-sm-3">
                             <button class="clear-trade-qualifier btn btn-warning" type="button">Clear</button>
                         </div>
@@ -62,7 +66,7 @@
                                 <label class="custom-control-label" for="Qualifier1Disqualified">Disqualified</label>
                             </div>
                         </div>
-                        </div>
+                    </div>
 
                     <div class="form-group row hasSelect">
                         @Html.LabelFor(x => x.Qualifier2, new { @class = "col-sm-2 col-form-label" })
