--- a/TradeProAssistant/Views/TradeProStrategy/_TradeTicketForm.cshtml
+++ b/TradeProAssistant/Views/TradeProStrategy/_TradeTicketForm.cshtml
@@ -14,6 +14,12 @@
             <div class="card mb-3">
                 <div class="card-header text-white bg-warning">Trade Ticket</div>
                 <div class="card-body">
+                    <div class="form-group row pb-2">
+                        @Html.LabelFor(x => x.NBT, new { @class = "col-sm-2 col-form-label" })
+                        <div class="col-sm-10">
+                            @Html.TextAreaFor(x => x.NBT, new { @class = "form-control", rows = 3 })
+                        </div>
+                    </div>
                     <div id="market-structure-qualifiers" class="form-group row d-flex justify-content-center">
                         @Html.Action("MarketStructureQualifiers", "TradeProStrategy", new { strategy = Model.Strategy })
                     </div>
@@ -144,7 +150,7 @@
                     <div class="form-group row">
                         @Html.LabelFor(x => x.Notes, new { @class = "col-sm-2 col-form-label" })
                         <div class="col-sm-10">
-                            @Html.TextAreaFor(x => x.Notes, new { @class = "form-control", rows = 5 })
+                            @Html.TextAreaFor(x => x.Notes, new { @class = "form-control", rows = 3 })
                         </div>
                     </div>
 
