make performance length dynamic and add qualifiers to visuals tab on trade ticket

--- a/TradeProAssistant/Views/TradeProStrategy/_MonthPerformance.cshtml
+++ b/TradeProAssistant/Views/TradeProStrategy/_MonthPerformance.cshtml
@@ -72,7 +72,7 @@ Decimal width = (adjustedVal < 0 ? adjustedVal / min : adjustedVal / max) * 100;
 <div class="row">
     <div class="col-12">
         <div class="card mb-3">
-            <div class="card-header text-white bg-info">Month of @Model.Date.ToShortDateString() - @Model.Date.AddDays(25).ToShortDateString()</div>
+            <div class="card-header text-white bg-info">Month of @Model.Date.ToShortDateString() - @Model.Date.AddDays((GlobalSettings.ActiveTradingSettings.Weeks * 7) - 3).ToShortDateString()</div>
             <div class="card-body p-3">
                 <div class="row">
                     <div class="col-6">
