--- a/TradeProAssistant/Views/TradeProStrategy/_TradeTicketsTable.cshtml
+++ b/TradeProAssistant/Views/TradeProStrategy/_TradeTicketsTable.cshtml
@@ -1,4 +1,4 @@
-﻿@(Html.Kendo().Grid<TradeTicketDto>()
+﻿@(Html.Kendo().Grid<TradeTicketModel>()
             .Name("tradeTicketsGrid")
             .Columns(columns =>
             {
