--- a/TradeProAssistant/Views/TradeProStrategy/_StrategyTab.cshtml
+++ b/TradeProAssistant/Views/TradeProStrategy/_StrategyTab.cshtml
@@ -1,4 +1,4 @@
-﻿@model TradeTicketDto
+﻿@model TradeTicketModel
 
 <ul class="nav nav-tabs pt-2" id="tabs" role="tablist">
     <li class="nav-item">
